--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <Header>
         <Section>
-            <img src="580b57fcd9996e24bc43c46e.png" alt="BMW Logo" url="www.bmw.com">
+            <img src="580b57fcd9996e24bc43c46e.png" alt="BMW Logo">
         </Section>
         <Section>
             <nav class="navbar">
@@ -25,15 +25,20 @@
         </Section>
     </Header>
     <main>
+        <h1>Contador:</h1>
+        <p id="contador">0</p>
+        <button id="incrementar">Incrementar</button>
+        <button id="resetear">Resetear</button>
+        <button id="disminuir">disminuir</button>
 
         <aside>
             <h1 text-align="right" class="titulo"> BMW M5 E60</h1>
         </aside>
 
-    </main>
-
-
-
+<footer>
+    <button id="miBoton" class="floating-button">Chat</button> 
+</footer>
+    <script src="contador.js"></script>
 
 </body>
 
